[gd_scene load_steps=14 format=3 uid="uid://f84twyg3pf4k"]

[ext_resource type="Script" path="res://Scripts/enemy_shooting.gd" id="1_7fl6s"]
[ext_resource type="Texture2D" uid="uid://3kgmsmdrq0qi" path="res://Images/dungeon-pack-full_version/rpgmaker/MZ/characters/_srw_monsters_1.png" id="3_dsjkh"]
[ext_resource type="AudioStream" uid="uid://bn3h6i888688r" path="res://sounds/ghost_noise.wav" id="4_ool4o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fnvt"]
size = Vector2(139.131, 133.565)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mx4r"]

[sub_resource type="Animation" id="Animation_km843"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [57]
}

[sub_resource type="Animation" id="Animation_06f5r"]
resource_name = "fire_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [57, 58, 59]
}

[sub_resource type="Animation" id="Animation_p8rf2"]
resource_name = "fire_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [69, 70, 71]
}

[sub_resource type="Animation" id="Animation_8pb2w"]
resource_name = "fire_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [94, 95]
}

[sub_resource type="Animation" id="Animation_ec7ij"]
resource_name = "ice_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_el04d"]
resource_name = "ice_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [62]
}

[sub_resource type="Animation" id="Animation_nn2d8"]
resource_name = "ice_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [86]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tl8m4"]
_data = {
"RESET": SubResource("Animation_km843"),
"fire_down": SubResource("Animation_06f5r"),
"fire_side": SubResource("Animation_p8rf2"),
"fire_up": SubResource("Animation_8pb2w"),
"ice_down": SubResource("Animation_ec7ij"),
"ice_side": SubResource("Animation_el04d"),
"ice_up": SubResource("Animation_nn2d8")
}

[node name="Enemy_Shooting" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(584, 316)
scale = Vector2(0.359375, 0.359375)
collision_layer = 4
collision_mask = 67
script = ExtResource("1_7fl6s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-69.8939, -191.706)
scale = Vector2(2.7394, 2.86399)
texture = ExtResource("3_dsjkh")
hframes = 12
vframes = 8
frame = 57

[node name="EnemyCollision" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2(-66.7826, -77.913)
shape = SubResource("RectangleShape2D_7fnvt")

[node name="EnemyView" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8mx4r")

[node name="Node2D" type="Node2D" parent="."]

[node name="BulletSpawn" type="Marker2D" parent="Node2D"]
position = Vector2(147.478, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ReloadTime" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tl8m4")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ool4o")
pitch_scale = 0.6

[connection signal="shot" from="." to="." method="_on_shot"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ReloadTime" to="." method="_on_reload_time_timeout"]
